gcs (0.3.20+ehbello2) UNRELEASED; urgency=low

  * Allows reading package lists with brackets in their versions, e.g.:
    gcs (> 0.3.20)
  * Fixed bug when divert a file due to a variable not defined.
  * Added support for debian install file to get a more readable rules file
    in target packages.

 -- Enrique Hernández Bello <quique@osl.ull.es>  Mon, 05 Jul 2010 22:30:51 +0100

gcs (0.3.20+ehbello1) karmic; urgency=low

  * Added support for all architectures.
  * Added preremoval script to delete all remaining pyc files for a clean
    uninstall.
  * Added support for Recommends and Suggests control fields.
    preparation process is no longer necessary.
  * Changed default config_extension to .gcs
  * Added an option parameter for gcs_build to don't build the Debian source
    generated. It's useful to build it later.
  * Created <DISTRIB> tag with the codename of the parent distribution for the
    changelog template.
  * Added support for <AUTHOR> tag in copyright template.
  * Deleted some old stuff.
  * Replaced python-syck dependence by a newer python-yaml.
  * The example section in the info file of the skeleton by default couldn't
    have multiple words.
  * Fixed almost all lintian warnings coming from this debian package and the
    debian templates for gcs.
  * Added feature to change the base directory of diverted files. Useful for a
    run-parts style of directory. [config: diverts_basepath]
  * Removed execution permission to the templates and gave them later to the
    post and pre scripts

 -- Enrique Hernández Bello <quique@osl.ull.es>  Sat, 20 Feb 2010 14:25:20 +0000

gcs (0.3.20) jaunty; urgency=low

  * Added Provides: control's field support

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Wed, 17 Jun 2009 11:06:26 +0200

gcs (0.3.19) jaunty; urgency=low

  * Added Replace: control's field support

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Mon, 15 Jun 2009 10:32:06 +0200

gcs (0.3.18) jaunty; urgency=low
