@@ -6,6 +6,7 @@ preinst_template: /usr/share/gcs/templates/preinst.template
 postinst_template: /usr/share/gcs/templates/postinst.template
 prerm_template: /usr/share/gcs/templates/prerm.template
 postrm_template: /usr/share/gcs/templates/postrm.template
+config_template: /usr/share/gcs/templates/config.template
 copyright_template: /usr/share/gcs/templates/copyright.template
 
 ## Final extension for the configuration files.
