@@ -1,0 +1,4 @@
+Template: foo/baz
+Type: boolean
+Description: Clear enough, no?
+ This is another question, of boolean type.
