@@ -1,0 +1,12 @@
+#!/bin/sh -e
+
+## Source debconf library.
+. /usr/share/debconf/confmodule
+## Require debconf protocol version 2.0
+db_version 2.0 
+## This conf script is capable of backing up
+db_capb backup
+
+<DBINPUT_SLOT>
+
+db_go || true
