@@ -9,7 +9,7 @@ Package: <NAME>
 Architecture: all
 Provides: <PROVIDES>
 Replaces: <REPLACES>
-Pre-Depends: <PREDEPENDS>
+Pre-Depends: ${misc:Depends}, <PREDEPENDS>
 Depends: ${misc:Depends}, <DEPENDS>
 Recommends: <RECOMMENDS>
 Suggests: <SUGGESTS>
