@@ -5,8 +5,10 @@ gcs (0.3.20+ehbello2) UNRELEASED; urgency=low
   * Fixed bug when divert a file due to a variable not defined.
   * Added support for debian install file to get a more readable rules file
     in target packages.
+  * Added preliminary support for adding questions during install proccess
+    of the packages using DebConf.
 
- -- Enrique Hernández Bello <quique@osl.ull.es>  Mon, 05 Jul 2010 22:30:51 +0100
+ -- Enrique Hernández Bello <quique@osl.ull.es>  Tue, 06 Jul 2010 13:36:11 +0100
 
 gcs (0.3.20+ehbello1) karmic; urgency=low
 
